--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -66,8 +67,7 @@ repositories {
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.aar'])
-  compileOnly(name: 'AsleepSDK', ext: 'aar')
+  implementation 'ai.asleep:asleepsdk:2.4.3'
   implementation 'com.facebook.react:react-native:+'
   implementation 'com.google.code.gson:gson:2.8.9'
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
