--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "expo": "~51.0.22",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
