--- a/android/build.gradle
+++ b/android/build.gradle
@@ -73,7 +73,7 @@ repositories {
 }
 
 dependencies {
-  implementation('ai.asleep:asleepsdk:2.4.3') {
+  implementation('ai.asleep:asleepsdk:3.1.1') {
     exclude group: 'com.android.support'
   }
   
@@ -81,9 +81,10 @@ dependencies {
     exclude group: 'com.android.support'
   }
   
-  implementation 'com.google.code.gson:gson:2.8.9'
+  implementation 'com.google.code.gson:gson:2.10'
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
   implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
-  implementation "androidx.lifecycle:lifecycle-service:2.7.0"
-  implementation "androidx.lifecycle:lifecycle-common-java8:2.7.0"
+  implementation "androidx.lifecycle:lifecycle-service:2.8.7"
+  implementation "androidx.lifecycle:lifecycle-common-java8:2.8.7"
+  implementation "com.squareup.okhttp3:okhttp:4.11.0"
 }
