--- a/android/build.gradle
+++ b/android/build.gradle
@@ -87,4 +87,5 @@ dependencies {
   implementation "androidx.lifecycle:lifecycle-service:2.8.7"
   implementation "androidx.lifecycle:lifecycle-common-java8:2.8.7"
   implementation "com.squareup.okhttp3:okhttp:4.11.0"
+  implementation 'com.google.android.play:integrity:1.3.0'
 }
