--- a/example/app.json
+++ b/example/app.json
@@ -13,7 +13,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "ai.asleep.reactnative.example"
+      "bundleIdentifier": "ai.asleep.reactnative.example",
+      "infoPlist": {
+        "NSMicrophoneUsageDescription": "This app uses the microphone to analyze sleep patterns and provide sleep tracking functionality."
+      }
     },
     "android": {
       "adaptiveIcon": {
