--- a/example/package.json
+++ b/example/package.json
@@ -8,16 +8,16 @@
     "ios": "npx expo run:ios"
   },
   "dependencies": {
-    "expo": "~51.0.22",
+    "expo": "^53.0.9",
     "moment": "^2.30.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true,
   "expo": {
