--- a/example/ios/reactnativeasleepexample/Info.plist
+++ b/example/ios/reactnativeasleepexample/Info.plist
@@ -46,6 +46,10 @@
     </dict>
     <key>NSMicrophoneUsageDescription</key>
     <string>This app uses the microphone to analyze sleep patterns and provide sleep tracking functionality.</string>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>audio</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
