--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@types/react": "^18.0.25",
     "@types/react-native": "^0.73.0",
     "expo-module-scripts": "^3.5.2",
-    "expo-modules-core": "^1.12.19"
+    "expo-modules-core": "^1.12.19",
+    "zustand": "^5.0.5"
   },
   "peerDependencies": {
     "expo": "*",
