Fix release workflow to use semantic-release with Yarn (#23)
* Refactor release workflow to use semantic-release without version pinning and update npm plugin to semantic-release-yarn

Signed-off-by: Hankyeol Kyung <kghnkl0103@gmail.com>

* Update release workflow to use yarn for semantic-release and add necessary plugins

Signed-off-by: Hankyeol Kyung <kghnkl0103@gmail.com>

---------

Signed-off-by: Hankyeol Kyung <kghnkl0103@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,9 @@ jobs:
           cache: "yarn"
       - run: corepack enable
       - run: yarn install --frozen-lockfile
+      - run: yarn add -D semantic-release @semantic-release/changelog @semantic-release/commit-analyzer @semantic-release/git @semantic-release/github @semantic-release/release-notes-generator semantic-release-yarn
 
-      - run: npx semantic-release@21.0.2
+      - run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
