--- a/package.json
+++ b/package.json
@@ -30,10 +30,16 @@
   "license": "SEE LICENSE IN <filename>",
   "homepage": "https://github.com/asleep-ai/asleep-sdk-react-native#readme",
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/react": "^18.0.25",
     "@types/react-native": "^0.73.0",
     "expo-module-scripts": "^3.5.2",
     "expo-modules-core": "^1.12.19",
+    "semantic-release": "^24.2.5",
     "zustand": "^5.0.5"
   },
   "peerDependencies": {
